--- a/Open5GS/Deployment/upf/upf.yaml
+++ b/Open5GS/Deployment/upf/upf.yaml
@@ -10,14 +10,10 @@ spec:
   selector:
     epc-mode: upf1
   ports:
-    - name: tcp-80
+    - name: http2-80
       protocol: TCP
       port: 80
       targetPort: 80
-    - name: tcp-9090
-      protocol: TCP
-      port: 9090
-      targetPort: 9090
     - name: udp-2152
       protocol: UDP
       port: 2152
@@ -26,10 +22,6 @@ spec:
       protocol: UDP
       port: 8805
       targetPort: 8805
-    # - name: http-open5gs-upf1-9100
-    #   protocol: TCP
-    #   port: 9100
-    #   targetPort: 9100
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -56,26 +48,13 @@ spec:
         kubernetes.io/arch: amd64
         kubernetes.io/hostname: whitesnake
       containers:
-        # - name: tcpdump-upf1
-        #   image: maikovisky/open5gs:2.6.4
-        #   imagePullPolicy: Always
-        #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/upf1-%F_%H%M.pcap"]
-        #   volumeMounts:
-        #     - name: "dev-net-tun"
-        #       mountPath: "/dev/net/tun" # Needed for VPN
-        #     - name: tcpdump-persistent-storage
-        #       mountPath: /var/tcpdump
-
         - name: upf1
           image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           ports:
-            - name: tcp-80
+            - name: http2-80
               protocol: TCP
               containerPort: 80
-            - name: tcp-9090
-              protocol: TCP
-              containerPort: 9090
             - name: udp-2152
               protocol: UDP
               containerPort: 2152
@@ -86,22 +65,16 @@ spec:
             privileged: true
             capabilities:
               add: ["NET_ADMIN", "SYS_MODULE"]
-
           volumeMounts:
             - name: open5gs-upf1-config
               mountPath: /open5gs/config-map/upf.yaml
               subPath: "upf.yaml"
-
             - name: "dev-net-tun"
               mountPath: "/dev/net/tun" # Needed for VPN
-
             - name: open5gs-upf1-config
               mountPath: /bin/entrypoint.sh
               subPath: entrypoint.sh
-
-          #command: ["open5gs-upfd", "-c", "/open5gs/config-map/upf.yaml"]
           command: ["/bin/entrypoint.sh"]
-
       volumes:
         - name: open5gs-upf1-config
           configMap:
@@ -113,25 +86,6 @@ spec:
         - name: tcpdump-persistent-storage
           persistentVolumeClaim:
             claimName: open5gs-tcpdump-pv-claim
-
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: open5gs-upf-1
-  namespace: cemenin
-  labels:
-    epc-mode: upf1
-    prometheus: open5gs-monitor
-spec:
-  selector:
-    matchLabels:
-      epc-mode: upf1
-  endpoints:
-    # - interval: 5s
-    #   port: http-open5gs-upf1-9100
-    - interval: 5s
-      port: http-open5gs-upf1-9090
 ---
 apiVersion: v1
 kind: ConfigMap
