--- a/Open5GS/Deployment/amf/amf.yaml
+++ b/Open5GS/Deployment/amf/amf.yaml
@@ -27,21 +27,17 @@ spec:
         nodetype: server
         kubernetes.io/arch: amd64
         #kubernetes.io/hostname: molejo
-
       containers:
         - name: amf
           image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           ports:
-            - name: tcp-80
+            - name: http2-80
               protocol: TCP
               containerPort: 80
             - name: sctp-38412
               protocol: SCTP
               containerPort: 38412
-            - name: tcp-9090
-              protocol: TCP
-              containerPort: 9090
           securityContext:
             privileged: true
             capabilities:
@@ -61,69 +57,17 @@ spec:
               mountPath: "/dev/net/tun" # Needed for VPN
             - name: tcpdump-persistent-storage
               mountPath: /var/tcpdump
-
           command: ["open5gs-amfd", "-c", "/open5gs/config-map/amf.yaml"]
-          #command: ["sleep", "1d"]
-
-        # - name: ebpf-amf
-        #   image: maikovisky/ebpf:latest
-        #   command: ["sleep", "1d"]
-        #   securityContext:
-        #     privileged: true
-        #     capabilities:
-        #       add: ["NET_ADMIN", "SYS_MODULE"]
-        #   volumeMounts:
-        #     - name: "dev-net-tun"
-        #       mountPath: "/dev/net/tun" # Needed for VPN
-
-        # - name: metrics-amf
-        #   image: maikovisky/open5gs:2.6.4
-        #   command: ["/bin/prometheus-node-exporter"]
-        #   volumeMounts:
-        #     - name: "dev-net-tun"
-        #       mountPath: "/dev/net/tun" # Needed for VPN
-
-        # - name: tcpdump-amf
-        #   image: maikovisky/open5gs:2.6.4
-        #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/amf-%F_%H%M.pcap"]
-        #   volumeMounts:
-        #     - name: "dev-net-tun"
-        #       mountPath: "/dev/net/tun" # Needed for VPN
-        #     - name: tcpdump-persistent-storage
-        #       mountPath: /var/tcpdump
-
       volumes:
         - name: open5gs-amf-config
           configMap:
             name: open5gs-amf-config
-
         - name: dev-net-tun
           hostPath:
             path: /dev/net/tun
-
         - name: tcpdump-persistent-storage
           persistentVolumeClaim:
             claimName: open5gs-tcpdump-pv-claim
-
-        # - name: tcpdump-persistent-storage
-        #   persistentVolumeClaim:
-        #     claimName: open5gs-tcpdump-pv-claim
-
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: open5gs-amf
-  namespace: cemenin
-  labels:
-    epc-mode: amf
-spec:
-  selector:
-    matchLabels:
-      epc-mode: amf
-  endpoints:
-    - interval: 5s
-      port: http-open5gs-amf-9090
 ---
 apiVersion: v1
 kind: Service
@@ -131,19 +75,17 @@ metadata:
   name: open5gs-amf
   namespace: cemenin
   labels:
+    app: amf
     epc-mode: amf
     prometheus: open5gs-monitor
 spec:
   selector:
     epc-mode: amf
   ports:
-    - name: tcp-80
+    - name: http2-80
       protocol: TCP
       port: 80
       targetPort: 80
-    - name: tcp-9090
-      protocol: TCP
-      port: 9090
     - name: sctp-38412
       protocol: SCTP
       targetPort: 38412
