--- a/Open5GS/Deployment/ausf/ausf.yaml
+++ b/Open5GS/Deployment/ausf/ausf.yaml
@@ -10,13 +10,10 @@ spec:
   selector:
     epc-mode: ausf
   ports:
-    - name: tcp-80
+    - name: http2-80
       protocol: TCP
       port: 80
       targetPort: 80
-    # - name: http-open5gs-ausf-9100
-    #   protocol: TCP
-    #   port: 9100
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -42,24 +39,14 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: molejo
       containers:
-        # - name: metrics-ausf
-        #   image: maikovisky/open5gs:2.6.4
-        #   command: ["/bin/prometheus-node-exporter"]
-
-        # - name: tcpdump-ausf
-        #   image: maikovisky/open5gs:2.6.4
-        #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/ausf-%F_%H%M.pcap"]
-        #   volumeMounts:
-        #     - name: tcpdump-persistent-storage
-        #       mountPath: /var/tcpdump
-
         - name: ausf
           image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           ports:
-            - containerPort: 80
+            - name: http2-80
+              protocol: TCP
+              containerPort: 80
           securityContext:
             privileged: true
             capabilities:
@@ -75,7 +62,6 @@ spec:
             - name: open5gs-ausf-config
               mountPath: /open5gs/config-map/ausf.yaml
               subPath: "ausf.yaml"
-
           command: ["open5gs-ausfd", "-c", "/open5gs/config-map/ausf.yaml"]
       volumes:
         - name: open5gs-ausf-config
@@ -85,18 +71,4 @@ spec:
         - name: tcpdump-persistent-storage
           persistentVolumeClaim:
             claimName: open5gs-tcpdump-pv-claim
-# ---
-# apiVersion: monitoring.coreos.com/v1
-# kind: ServiceMonitor
-# metadata:
-#   name: open5gs-ausf
-#   namespace: cemenin
-#   labels:
-#     epc-mode: ausf
-# spec:
-#   selector:
-#     matchLabels:
-#       epc-mode: ausf
-#   endpoints:
-#   - interval: 30s
-#     port: http-open5gs-ausf-9100
+
