--- a/Open5GS/Deployment/bsf/bsf.yaml
+++ b/Open5GS/Deployment/bsf/bsf.yaml
@@ -10,28 +10,10 @@ spec:
   selector:
     epc-mode: bsf
   ports:
-    - name: tcp-80
+    - name: http2-80
       protocol: TCP
       port: 80
       targetPort: 80
-    # - name: http-open5gs-bsf-9100
-    #   protocol: TCP
-    #   port: 9100
-# ---
-# apiVersion: monitoring.coreos.com/v1
-# kind: ServiceMonitor
-# metadata:
-#   name: open5gs-bsf
-#   namespace: cemenin
-#   labels:
-#     epc-mode: bsf
-# spec:
-#   selector:
-#     matchLabels:
-#       epc-mode: bsf
-#   endpoints:
-#   - interval: 30s
-#     port: http-open5gs-bsf-9100
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -56,23 +38,14 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: molejo
       containers:
-        # - name: tcpdump-bsf
-        #   imagePullPolicy: Always
-        #   image: maikovisky/open5gs:2.6.4
-        #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/bsf-%F_%H%M.pcap"]
-        #   volumeMounts:
-        #     - name: "dev-net-tun"
-        #       mountPath: "/dev/net/tun" # Needed for VPN
-        #     - name: tcpdump-persistent-storage
-        #       mountPath: /var/tcpdump
-
         - name: bsf
           image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           ports:
-            - containerPort: 80
+            - name: http2-80
+              protocol: TCP
+              containerPort: 80
           securityContext:
             privileged: true
             capabilities:
