--- a/Open5GS/Deployment/iperf/iperf.yaml
+++ b/Open5GS/Deployment/iperf/iperf.yaml
@@ -10,7 +10,7 @@ spec:
   selector:
     epc-mode: iperf
   ports:
-    - name: tcp-5001
+    - name: http2-5001
       protocol: TCP
       port: 5001
       targetPort: 5001
@@ -18,10 +18,6 @@ spec:
       protocol: UDP
       port: 5001
       targetPort: 5001
-    - name: tcp-9100
-      protocol: TCP
-      port: 9100
-      targetPort: 9100
 ---    
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -49,15 +45,12 @@ spec:
         - name: iperf
           image: mlabbe/iperf:latest  
           ports:
-            - name: tcp-5001
+            - name: http2-5001
               protocol: TCP
               containerPort: 5001
             - name: udp-5001
               protocol: UDP
               containerPort: 5001
-            - name: tcp-9100
-              protocol: TCP
-              containerPort: 9100
           securityContext:
             privileged: true
             capabilities:
