--- a/Open5GS/Deployment/nrf/nrf.yaml
+++ b/Open5GS/Deployment/nrf/nrf.yaml
@@ -11,13 +11,10 @@ spec:
     epc-mode: nrf
   #type: LoadBalancer
   ports:
-    - name: tcp-80
+    - name: http2-80
       protocol: TCP
       port: 80
       targetPort: 80
-    # - name: http-open5gs-nrf-9100
-    #   protocol: TCP
-    #   port: 9100
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -28,7 +25,6 @@ metadata:
     epc-mode: nrf
     version: 2.6.4
     app: open5gs-nrf
-
 spec:
   replicas: 1
   selector:
@@ -45,7 +41,6 @@ spec:
         nodetype: server
         kubernetes.io/arch: amd64
         #kubernetes.io/hostname: molejo
-
       containers:
         - name: tcpdump-nrf
           image: maikovisky/open5gs:2.6.4
@@ -67,75 +62,45 @@ spec:
               mountPath: "/dev/net/tun" # Needed for VPN
             - name: tcpdump-persistent-storage
               mountPath: /var/tcpdump
-
         - name: nrf
           image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           ports:
-            - containerPort: 80
+            - name: http2-80
+              protocol: TCP
+              containerPort: 80
           securityContext:
             privileged: true
             capabilities:
               add: ["NET_ADMIN", "SYS_MODULE"]
-
           volumeMounts:
             - name: open5gs-nrf-config
               mountPath: /open5gs/config-map/nrf.yaml
               subPath: "nrf.yaml"
             - name: "dev-net-tun"
               mountPath: "/dev/net/tun" # Needed for VPN
-
           command: ["open5gs-nrfd", "-c", "/open5gs/config-map/nrf.yaml"]
-
-        # - name: metrics-nrf
-        #   image: maikovisky/open5gs:2.6.4
-        #   command: ["/bin/prometheus-node-exporter"]
-        #   volumeMounts:
-        #     - name: "dev-net-tun"
-        #       mountPath: "/dev/net/tun" # Needed for VPN
-
       volumes:
         - name: open5gs-nrf-config
           configMap:
             name: open5gs-nrf-config
-
         - name: dev-net-tun
           hostPath:
             path: /dev/net/tun
-
         - name: tcpdump-persistent-storage
           persistentVolumeClaim:
             claimName: open5gs-tcpdump-pv-claim
-
-        # - name: logfile-persistent-storage
-        #   persistentVolumeClaim:
-        #     claimName: open5gs-tcpdump-pv-claim
-# ---
-# apiVersion: monitoring.coreos.com/v1
-# kind: ServiceMonitor
-# metadata:
-#   name: open5gs-nrf
-#   namespace: cemenin
-#   labels:
-#     epc-mode: nrf
-# spec:
-#   selector:
-#     matchLabels:
-#       epc-mode: nrf
-#   endpoints:
-#   - interval: 30s
-#     port: http-open5gs-nrf-9100
 ---
-apiVersion: networking.istio.io/v1alpha3
-kind: DestinationRule
-metadata:
-  name: open5gs-nrf
-spec:
-  host: open5gs-nrf
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
-  subsets:
-    - name: v1
-      labels:
-        version: 2.6.4
+#apiVersion: networking.istio.io/v1alpha3
+#kind: DestinationRule
+#metadata:
+#  name: open5gs-nrf
+#spec:
+#  host: open5gs-nrf
+#  trafficPolicy:
+#    tls:
+#      mode: ISTIO_MUTUAL
+#  subsets:
+#    - name: v1
+#      labels:
+#        version: 2.6.4
