--- a/Open5GS/Deployment/nssf/nssf.yaml
+++ b/Open5GS/Deployment/nssf/nssf.yaml
@@ -10,14 +10,10 @@ spec:
   selector:
     epc-mode: nssf
   ports:
-    - name: tcp-80
+    - name: http2-80
       protocol: TCP
       port: 80
       targetPort: 80
-    # - name: http-open5gs-nssf-9100
-    #   protocol: TCP
-    #   port: 9100
-    #   targetPort: 9100
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -26,7 +22,6 @@ metadata:
   namespace: cemenin
   labels:
     epc-mode: nssf
-
 spec:
   replicas: 1
   selector:
@@ -38,25 +33,16 @@ spec:
         epc-mode: nssf
         app: open5gs-nssf
         version: 2.6.4
-        # version: v2.6.1-26
     spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: molejo
       containers:
-        # - name: tcpdump-nssf
-        #   image: maikovisky/open5gs:2.6.4
-        #   command: ["/bin/tcpdump", "-i", "eth0", "-s", "65535", "-G", "3600", "-w", "/var/tcpdump/nssf-%F_%H%M.pcap"]
-        #   volumeMounts:
-        #     - name: tcpdump-persistent-storage
-        #       mountPath: /var/tcpdump
-
         - name: nssf
           image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
           ports:
-            - name: tcp-80
+            - name: http2-80
               protocol: TCP
               containerPort: 80
           securityContext:
@@ -67,13 +53,7 @@ spec:
             - name: open5gs-nssf-config
               mountPath: /open5gs/config-map/nssf.yaml
               subPath: "nssf.yaml"
-
           command: ["open5gs-nssfd", "-c", "/open5gs/config-map/nssf.yaml"]
-
-        # - name: metrics-nssf
-        #   image: maikovisky/open5gs:2.6.4
-        #   command: ["/bin/prometheus-node-exporter"]
-
       volumes:
         - name: open5gs-nssf-config
           configMap:
@@ -82,18 +62,4 @@ spec:
         - name: tcpdump-persistent-storage
           persistentVolumeClaim:
             claimName: open5gs-tcpdump-pv-claim
-# ---
-# apiVersion: monitoring.coreos.com/v1
-# kind: ServiceMonitor
-# metadata:
-#   name: open5gs-nssf
-#   namespace: cemenin
-#   labels:
-#     epc-mode: nssf
-# spec:
-#   selector:
-#     matchLabels:
-#       epc-mode: nssf
-#   endpoints:
-#   - interval: 30s
-#     port: http-open5gs-nssf-9100
+
