--- a/Open5GS/Deployment/scp/scp.yaml
+++ b/Open5GS/Deployment/scp/scp.yaml
@@ -7,14 +7,14 @@ spec:
   selector:
     epc-mode: scp
   ports:
-    - name: http2-open5gs-scp-80
+    - name: http2-80
       protocol: TCP
       port: 80
       targetPort: 80
-    # - name: http-open5gs-scp-9100
-    #   protocol: TCP
-    #   port: 9100
-    #   targetPort: 9100
+    - name: http2-15090
+      protocol: TCP
+      port: 15090
+      targetPort: 15090
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -101,4 +101,4 @@ spec:
 #       epc-mode: scp
 #   endpoints:
 #   - interval: 30s
-#     port: http-open5gs-scp-9100
+#     port: http2-open5gs-scp-9100
