--- a/Open5GS/Deployment/tester/my5grantester.yaml
+++ b/Open5GS/Deployment/tester/my5grantester.yaml
@@ -1,26 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: open5gs-my5grantester
-  namespace: cemenin
-  labels:
-    epc-mode: my5grantester
-    prometheus: open5gs-monitor
-spec:
-  selector:
-    epc-mode: my5grantester
-  ports:
-    - name: tcp-80
-      protocol: TCP
-      port: 80
-    - name: tcp-3000
-      protocol: TCP
-      port: 3000
-    - name: tcp-9100
-      protocol: TCP
-      port: 9100
-      targetPort: 9100
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -47,16 +24,6 @@ spec:
       containers:
         - name: my5grantester
           image: carlosmenin/my5grantester:latest
-          ports:
-            - name: tcp-80
-              protocol: TCP
-              containerPort: 80
-            - name: tcp-3000
-              protocol: TCP
-              containerPort: 3000
-            - name: tcp-9100
-              protocol: TCP
-              containerPort: 9100
           env:
             - name: NGAP_LOCAL_ADDR
               valueFrom:
@@ -93,9 +60,9 @@ spec:
             - name: SST_UE
               value: "000001"
             - name: TEST
-              value: parallel
+              value: division
             - name: NUM_UE
-              value: "1"
+              value: "100"
             - name: DELAY
               value: "1000"
             - name: TIME
@@ -108,19 +75,3 @@ spec:
                 - NET_ADMIN
                 - SYS_MODULE
             privileged: true
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: open5gs-my5grantester
-  namespace: cemenin
-  labels:
-    epc-mode: my5grantester
-spec:
-  selector:
-    matchLabels:
-      epc-mode: my5grantester
-  endpoints:
-    - interval: 30s
-      port: open5gs-my5grantester-tcp-9100
----
