--- a/Open5GS/Deployment/webui/webui.yaml
+++ b/Open5GS/Deployment/webui/webui.yaml
@@ -9,11 +9,11 @@ spec:
   selector:
     epc-mode: webui
   ports:
-    - name: tcp-80
+    - name: http2-80
       protocol: TCP
       port: 80
       targetPort: 3000
-    - name: tcp-3000
+    - name: http2-3000
       protocol: TCP
       port: 3000
 ---    
@@ -34,8 +34,6 @@ spec:
       
   template:
     metadata:
-#      annotations:
-#        "helm.sh/hook": pre-install    
       labels:
         epc-mode: webui
         app: webui
@@ -50,17 +48,16 @@ spec:
         - name: webui
           image: maikovisky/open5gs-webui:latest
           ports:
-            - name: tcp-80
+            - name: http2-80
               protocol: TCP
               containerPort: 80
-            - name: tcp-3000
+            - name: http2-3000
               protocol: TCP
               containerPort: 3000  
           securityContext:
             privileged: true
             capabilities:
               add: ["NET_ADMIN", "SYS_MODULE"]
-          #imagePullPolicy: {{ .Values.open5gs.image.pullPolicy }}
           volumeMounts:
             - name: "dev-net-tun"
               mountPath: "/dev/net/tun" # Needed for VPN
