--- a/OAI-5G/Deployment/my5grantester.yaml
+++ b/OAI-5G/Deployment/my5grantester.yaml
@@ -4,16 +4,19 @@ metadata:
   name: oai-my5grantester
   namespace: oai-cn5g
   labels:
-    app: my5grantester
+    app: oai-my5grantester
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: my5grantester
+      app: oai-my5grantester
   template:
     metadata:
       labels:
-        app: my5grantester
+        app: oai-my5grantester
+        epc-mode: oai-my5grantester
+        prometheus: oai-monitor
+        version: 2.6.4
     spec:
       nodeSelector:
         nodetype: server
@@ -51,9 +54,9 @@ spec:
             - name: MSIN
               value: "0000000031"
             - name: OPC
-              value: C42449363BBAD02B66D16BC975D77CC1
+              value: 63bfa50ee6523365ff14c1f45f88737d
             - name: KEY
-              value: fec86ba6eb707ed08905757b1bb44b8f
+              value: 0C0A34601D4F07677303652C0462535B
             - name: AMF
               value: "8000"
             - name: SQN
@@ -74,41 +77,4 @@ spec:
                 - NET_ADMIN
                 - SYS_MODULE
             privileged: true
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: oai-my5grantester
-  namespace: cemenin
-  labels:
-    epc-mode: my5grantester
-spec:
-  selector:
-    matchLabels:
-      epc-mode: my5grantester
-  endpoints:
-    - interval: 30s
-      port: oai-my5grantester-tcp-9100
----
-apiVersion: v1
-kind: Service
-metadata:
-  name:  oai-my5grantester
-  namespace: oai-cn5g
-  labels:
-    epc-mode: my5grantester
-spec:
-  selector:
-    epc-mode: my5grantester
-  ports:
-    - name: oai-my5grantester-tcp-80
-      protocol: TCP
-      port: 80
-    - name: oai-my5grantester-tcp-3000
-      protocol: TCP
-      port: 3000
-    - name: oai-my5grantester-tcp-9100
-      protocol: TCP
-      port: 9100
-      targetPort: 9100
----
+
