--- a/OAI-5G/Deployment/smf.yaml
+++ b/OAI-5G/Deployment/smf.yaml
@@ -4,15 +4,18 @@ metadata:
   name: oai-smf
   namespace: oai-cn5g
   labels:
-    app: smf
+    app: oai-smf
 spec:
   selector:
     matchLabels:
-      app: smf
+      app: oai-smf
   template:
     metadata:
       labels:
-        app: smf
+        app: oai-smf
+        epc-mode: oai-smf
+        prometheus: oai-monitor
+        version: 2.6.4
     spec:
       nodeSelector:
         nodetype: server
@@ -21,10 +24,10 @@ spec:
           image: oaisoftwarealliance/oai-smf:v2.0.1
           command: ["/openair-smf/bin/oai_smf", "-c", "/configuracoes/smfConfig.yaml", "-o"]
           ports:
-            - name: sbi
+            - name: http2-80
               containerPort: 80
               protocol: TCP
-            - name: n4
+            - name: udp-8805
               containerPort: 8805
               protocol: UDP
           env:
@@ -46,17 +49,16 @@ metadata:
   namespace: oai-cn5g
 spec:
   selector:
-    app: smf
+    app: oai-smf
   ports:
-    - name: sbi
+    - name: http2-80
       protocol: TCP
       port: 80
       targetPort: 80
-    - name: n4
+    - name: udp-8805
       protocol: UDP
       port: 8805
       targetPort: 8805
-
 ---
 apiVersion: v1
 kind: ConfigMap
