--- a/Open5GS/Deployment/amf/amf-configmap.yaml
+++ b/Open5GS/Deployment/amf/amf-configmap.yaml
@@ -12,6 +12,10 @@ data:
     logger:
         # level: debug
         file: /var/log/open5gs/amf.log
+    
+    global:
+      max:
+        ue: 1500
 
     sbi:
       server:
