--- a/Open5GS/Deployment/amf/amf.yaml
+++ b/Open5GS/Deployment/amf/amf.yaml
@@ -26,7 +26,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: molejo
+        kubernetes.io/hostname: metallica
       containers:
         - name: amf
           image: maikovisky/open5gs:2.6.4
