--- a/Open5GS/Deployment/ausf/ausf.yaml
+++ b/Open5GS/Deployment/ausf/ausf.yaml
@@ -39,6 +39,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
+        kubernetes.io/hostname: metallica
       containers:
         - name: ausf
           image: maikovisky/open5gs:2.6.4
