--- a/Open5GS/Deployment/bsf/bsf.yaml
+++ b/Open5GS/Deployment/bsf/bsf.yaml
@@ -38,6 +38,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
+        kubernetes.io/hostname: metallica
       containers:
         - name: bsf
           image: maikovisky/open5gs:2.6.4
