--- a/Open5GS/Deployment/iperf/iperf.yaml
+++ b/Open5GS/Deployment/iperf/iperf.yaml
@@ -41,6 +41,7 @@ spec:
     spec:  
       nodeSelector:
         kubernetes.io/arch: amd64
+        kubernetes.io/hostname: kiss
       containers: 
         - name: iperf
           image: mlabbe/iperf:latest  
