--- a/Open5GS/Deployment/mongodb/mongodb.yaml
+++ b/Open5GS/Deployment/mongodb/mongodb.yaml
@@ -28,9 +28,8 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
         nodetype: server
-
       containers:
       - image: free5gmano/nextepc-mongodb
         name: open5gs-mongodb
