--- a/Open5GS/Deployment/scp/scp.yaml
+++ b/Open5GS/Deployment/scp/scp.yaml
@@ -39,7 +39,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: molejo
+        kubernetes.io/hostname: metallica
 
       containers:
         # - name: tcpdump-scp
