--- a/Open5GS/Deployment/smf/smf.yaml
+++ b/Open5GS/Deployment/smf/smf.yaml
@@ -54,6 +54,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
+        kubernetes.io/hostname: metallica
       containers:
         - name: smf
           image: maikovisky/open5gs:2.6.4
