--- a/Open5GS/Deployment/tester/my5grantester.yaml
+++ b/Open5GS/Deployment/tester/my5grantester.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: kiss
       containers:
         - name: my5grantester
           image: carlosmenin/my5grantester:latest
@@ -60,15 +60,19 @@ spec:
             - name: SST_UE
               value: "000001"
             - name: TEST
-              value: division
+              value: $TEST
             - name: NUM_UE
-              value: "100"
+              value: "$NUM_UE"
             - name: DELAY
-              value: "1000"
+              value: "$DELAY"
             - name: TIME
-              value: "10"
+              value: "60"
             - name: NGAP_REMOTE_ADDR
               value: open5gs-amf
+            - name: INTERVAL
+              value: "$INTERVAL"
+            - name: CONSTANT
+              value: "$CONSTANT"
           securityContext:
             capabilities:
               add:
