--- a/Open5GS/Deployment/udr/udr.yaml
+++ b/Open5GS/Deployment/udr/udr.yaml
@@ -37,6 +37,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
+        kubernetes.io/hostname: metallica
       containers:
         - name: udr
           image: maikovisky/open5gs:2.6.4
