--- a/Open5GS/Deployment/upf/upf.yaml
+++ b/Open5GS/Deployment/upf/upf.yaml
@@ -46,7 +46,7 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
       containers:
         - name: upf1
           image: maikovisky/open5gs:2.6.4
