--- a/Open5GS/Deployment/webui/webui.yaml
+++ b/Open5GS/Deployment/webui/webui.yaml
@@ -41,7 +41,7 @@ spec:
     spec:  
       nodeSelector:
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
         nodetype: server
 
       containers:
