--- a/Free5GC/Deployment/iperf/iperf.yaml
+++ b/Free5GC/Deployment/iperf/iperf.yaml
@@ -41,7 +41,7 @@ spec:
     spec:  
       nodeSelector:
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: acdc
       containers: 
 
         - name: iperf
