--- a/Free5GC/Deployment/ausf/ausf.yaml
+++ b/Free5GC/Deployment/ausf/ausf.yaml
@@ -22,7 +22,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
       containers:
         - name: ausf
           image: free5gc/ausf:v3.3.0
