--- a/Free5GC/Deployment/mongo/mongo.yaml
+++ b/Free5GC/Deployment/mongo/mongo.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
         nodetype: server
       containers:
       - image: free5gmano/nextepc-mongodb
