--- a/Free5GC/Deployment/nrf/nrf.yaml
+++ b/Free5GC/Deployment/nrf/nrf.yaml
@@ -56,7 +56,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
       containers:
         - name: nrf
           image: free5gc/nrf:v3.3.0
