--- a/Free5GC/Deployment/smf/smf.yaml
+++ b/Free5GC/Deployment/smf/smf.yaml
@@ -22,7 +22,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
       containers:
         - name: smf
           image: free5gc/smf:v3.3.0
