--- a/Free5GC/Deployment/udm/udm.yaml
+++ b/Free5GC/Deployment/udm/udm.yaml
@@ -22,7 +22,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
       containers:
         - name: udm
           image: free5gc/udm:v3.3.0
