--- a/Free5GC/Deployment/udr/udr.yaml
+++ b/Free5GC/Deployment/udr/udr.yaml
@@ -22,7 +22,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
       containers:
         - name: udr
           image: free5gc/udr:v3.3.0
