--- a/Free5GC/Deployment/ueransim/ueransim.yaml
+++ b/Free5GC/Deployment/ueransim/ueransim.yaml
@@ -19,7 +19,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
       containers:
         - name: ueransim
           image: free5gc/ueransim:v3.3.0
