--- a/Free5GC/Deployment/upf/upf.yaml
+++ b/Free5GC/Deployment/upf/upf.yaml
@@ -22,7 +22,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
       containers:
         - name: upf
           image: free5gc/upf:v3.3.0
