--- a/Free5GC/Deployment/webui/webui.yaml
+++ b/Free5GC/Deployment/webui/webui.yaml
@@ -21,7 +21,7 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        #kubernetes.io/hostname: whitesnake
+        kubernetes.io/hostname: metallica
       containers:
         - name: webui
           image: free5gc/webui:v3.3.0
